# EPSILOD

./: .clang-format  .gersemirc  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE.md  README.md  compile.sh  env.sh  format.sh
.github/: issue_template.md  pull_request_remplate.md
dsl/: gassim.py  gassim_dsl_kernel.py  simple_2d4.py  wavesim.py  wavesim_dsl_kernel.py
dsl/comparisons/: gassim_dsl_kernel.old.c  gassim_muesli.cpp  jacobi_cuda_orig.cpp  wavesim_celerity.cc  wavesim_dsl_kernel.old.c
dsl/docs/: epilod_dsl_spec.md
dsl/dsl_core/: epsilod_ctypes.py  epsilod_ctypes.pyi  epsilod_dsl.py  py2c.py  test.py
dsl/dsl_core/py2c_testbed/extra/: A.py  B.py  C.py
dsl/dsl_core/py2c_testbed/invalid/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  I.py  J.py  K.py  L.py  M.py  N.py  O.py  P.py  Q.py
dsl/dsl_core/py2c_testbed/valid/: A.py  B.py  C.py  D.py  E.py  F.py  G.py  H.py  I.py  J.py  K.py  L.py  M.py
examples/: CMakeLists.txt
examples/basic_stencils/: basic_stencils.c  basic_stencils_kernels.c  basic_stencils_kernels.cpp
examples/basic_stencils/comparison_codes/: jacobi_celerity.cc  jacobi_cuda.cu
examples/basic_stencils/fpga_kernels/: 1dC2.cl  1dNC4.cl  2d4.cl  2d4opt.cl  2d8.cl  2d8opt.cl  2dF5.cl  2dF5opt.cl  2dNC8.cl  2dNC8opt.cl  3d27.cl  3d27opt.cl  3d6.cl  3d6opt.cl  3dF7.cl  3dF7opt.cl  3dNC12.cl  3dNC12opt.cl  4d8.cl  4d8opt.cl  opt_common.h
examples/basic_stencils/fpga_kernels/kernel_body/: 2d4opt.h  2d8opt.h  2dF5opt.h  2dNC8opt.h  3d27opt.h  3d6opt.h  3dF7opt.h  3dNC12opt.h  4d8opt.h
examples/gassimulation/: gassimulation.c  gassimulation_ext_type.h  gassimulation_kernels.c  gassimulation_kernels.cu  gassimulation_types.h
examples/gaussian/: gaussian.c  gaussian_ext_type.h  gaussian_kernels.c  gaussian_kernels.cpp
examples/laplace/: laplace.c  laplace_ext_type.h  laplace_kernels.c  laplace_kernels.cpp  laplace_types.h
examples/poisson/: poisson.c  poisson_ext_type.h  poisson_kernels.c  poisson_kernels.cpp  poisson_types.h
examples/wavesim/: wavesim.c  wavesim_ext_type.h  wavesim_kernels.c  wavesim_kernels.cpp  wavesim_types.h
exp/basic_stencils/: check.sh  create_test.sh  exp_example1.sh  exp_example2.sh  gen_results.sh  test.sh
exp/basic_stencils/devicefiles/: allCPUs.conf  allCPUs_final.conf  allCuda.conf  allCuda_final.conf  amdGPU_final.conf  gorgonCPU.conf  mixedArchs.conf
exp/basic_stencils/devicefiles/mixedArchsTesting/: mixedArchs_128.conf  mixedArchs_32.conf  mixedArchs_64.conf
exp/basic_stencils/slurmfiles/: configCPU.conf  configCPU_4.conf  configGPU.conf  gorgonCPU.conf  manticoreGPU.conf
exp/basic_stencils/slurmfiles/mixedArchsTesting/: configMixed_128.conf  configMixed_32.conf  configMixed_64.conf
src/: epsilod.c  epsilod.h  epsilod_alb.c  epsilod_alb.h  epsilod_alb_heuristics.c  epsilod_alb_heuristics.h  epsilod_kernels.c  epsilod_kernels.cu  epsilod_kernels.h  epsilod_structs.c  epsilod_structs.h  epsilod_types.h
src/fpga_kernels/: .gitignore  1d.cl  2d.cl  3d.cl  4d.cl  epsilod_fpga_kernels.h  misc.cl
